@@ -463,25 +463,6 @@ def list_organizations(user):
 
 
 @register.filter
-def needs_access_group_migration(user, organization):
-    from sentry.models import AccessGroup, OrganizationMember, OrganizationMemberType
-
-    has_org_access_queryset = OrganizationMember.objects.filter(
-        user=user,
-        organization=organization,
-        has_global_access=True,
-        type__lte=OrganizationMemberType.ADMIN,
-    )
-
-    if not (user.is_superuser or has_org_access_queryset.exists()):
-        return False
-
-    return AccessGroup.objects.filter(
-        team__organization=organization
-    ).exists()
-
-
-@register.filter
 def count_pending_access_requests(organization):
     from sentry.models import OrganizationAccessRequest
 
